First part of client signup

--- a/templates/bank/index.html
+++ b/templates/bank/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
     <title>Game Signup</title>
+    <script type="text/javascript">
+       function loadFunc(){
+         document.getElementById('url').innerText=window.location.href;
+       }
+    </script>
 </head>
-<body>
+<body onload="loadFunc()">
     <h1>Game Signup</h1>
     <div class="info">
-       <p>If you are running the game for the first time, start it with the following command and parameter: 
-       <br><code>./client-run.sh {{ nodeaddress }}</code></p>
+       <p>If you are running the game for the first time, start it with the following command and parameters: 
+       <br><code>./client-run.sh {{ nodeaddress }} <span id="url">PLACEHOLDER</span>signup/</code></p>
        <p>If you have run the game before, your blockchain node should be present, so just run the game with the command:
        <br><code>./client-run.sh</code></p>
     </div>
