Flask and Flask-SocketIO issues

--- a/templates/bank/index.html
+++ b/templates/bank/index.html
@@ -9,13 +9,26 @@
     </script>
 </head>
 <body onload="loadFunc()">
+
+    <h1>Game Install</h1>
+    <div class="install">
+       <p>The game currently only runs on Linux, and has been tested on Ubuntu 18.10.
+       <ol>
+         <li>Download the code from <a href="https://github.com/kf106/blockchain-games/archive/master.zip">https://github.com/kf106/blockchain-games/archive/master.zip</a></li>
+         <li>Extract the zip file into a folder, for example <code>~/blockchain-games/</code></li>
+         <li>In the folder run <code>./install.sh</code></li>
+         <li>Then follow the instructions below</li>
+       </ol>
+    </div>
+
     <h1>Game Signup</h1>
-    <div class="info">
+    <div class="signup">
        <p>If you are running the game for the first time, start it with the following command and parameters: 
-       <br><code>./client-run.sh {{ nodeaddress }} <span id="url">PLACEHOLDER</span>signup/</code></p>
+       <br><code>./client-run.sh {{ nodeaddress }} <span id="url">PLACEHOLDER</span>signup</code></p>
        <p>If you have run the game before, your blockchain node should be present, so just run the game with the command:
        <br><code>./client-run.sh</code></p>
     </div>
+
 </body>
 </html>
 
